# aeolus

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CITATION.cff  MANIFEST.in  README.md  changelog.html  contributing.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  pyproject.toml  readthedocs.yml  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: docs.yml  linting.yml  pypipublish.yml  python-package.yml  pythonpublish.yml  tests.yml
0.4.2/doctrees/: contributing.doctree  index.doctree
0.4.2/doctrees/api/: calc.doctree  const.doctree  coord_utils.doctree  misc.doctree  region.doctree  subset.doctree  util.doctree
0.4.2/doctrees/examples/: 01_Loading_Data.doctree
0.4.2/html/: .buildinfo  changelog.html  contributing.html  genindex.html  index.html  install.html  objects.inv  search.html  searchindex.js
0.4.2/html/_modules/: index.html
0.4.2/html/api/: calc.html  const.html  coord_utils.html  core.html  grid.html  index.html  io.html  misc.html  plot.html  region.html  subset.html  util.html
0.4.2/html/examples/: 00_Constants.html  01_Loading_Data.html  index.html
0.4.4/doctrees/: changelog.doctree  index.doctree
0.4.4/doctrees/api/: coord.doctree  core.doctree  subset.doctree
0.4.4/doctrees/examples/: 01_Loading_Data.doctree
0.4.4/html/: .buildinfo  contributing.html  genindex.html  install.html  search.html
0.4.4/html/api/: calc.html  coord.html  core.html  io.html
0.4.4/html/examples/: 01_Loading_Data.ipynb
0.4.5/doctrees/: changelog.doctree  index.doctree  install.doctree
0.4.5/doctrees/api/: calc.doctree  const.doctree  coord.doctree  core.doctree  region.doctree  subset.doctree
0.4.5/html/: .buildinfo  changelog.html  contributing.html  genindex.html  index.html  install.html  objects.inv  search.html  searchindex.js
0.4.5/html/_modules/: index.html
0.4.5/html/api/: calc.html  const.html  coord.html  core.html  index.html  io.html  model.html  plot.html  region.html  subset.html
0.4.5/html/examples/: 00_Constants.html  00_Constants.ipynb  01_Loading_Data.html  index.html
0.4.6/doctrees/api/: coord.doctree  core.doctree  model.doctree  plot.doctree  region.doctree
0.4.6/html/: .buildinfo  changelog.html  contributing.html  genindex.html  index.html  install.html  objects.inv  search.html  searchindex.js
0.4.6/html/api/: calc.html  (+9 more)
_modules/: index.html
_modules/aeolus/: coord.html  core.html  io.html  lfric.html  log.html  region.html  subset.html  synthobs.html
_sources/: changelog.rst.txt  contributing.rst.txt  index.rst.txt  install.rst.txt
_sources/api/: calc.rst.txt  coord.rst.txt  core.rst.txt  index.rst.txt  io.rst.txt  log.rst.txt  plot.rst.txt  proc_um_output.rst.txt  region.rst.txt  synthobs.rst.txt
_sources/examples/: 00_Constants.ipynb.txt  01_Loading_Data.ipynb.txt  03_Transmission_Spectrum.ipynb.txt  index.rst.txt
_static/: documentation_options.js
aeolus/: __init__.py  _version.py  calc.py  const.py  coord.py  coord_utils.py  core.py  exceptions.py  grid.py  io.py  misc.py  region.py  subset.py
aeolus/calc/: __init__.py  calculus.py  diag.py  flux_h.py  metpy.py  stats.py
aeolus/const/: __init__.py  const.py
aeolus/model/: base.py  um.py
aeolus/phys_const_store/: earth.json  general.json  proxb.json
aeolus/plot/: __init__.py  cart.py  cloud_plot_tools.py  mpl.py  pv.py
aeolus/plots/: cm_custom.py
aeolus/tests/: dummy.json  test_calc.py  test_const.py  test_coord.py  test_core.py  test_grid.py
aeolus/util/: __init__.py  text.py
api/: calc.html  const.html  coord.html  core.html  index.html  io.html  lfric.html  log.html  model.html  plot.html  proc_um_output.html  region.html  subset.html  synthobs.html
ci/: deploy_docs.sh  environment-add-metpy.yml  environment-add-pyvista.yml  environment-py3.10.yml  environment-py3.11.yml  environment-py3.7.yml  environment-py3.8.yml  environment-py3.9.yml  environment-py37.yml  environment-py38.yml  environment-py39.yml  requirements-py37-metpy.yml  requirements-py37-pyvista.yml  requirements-py37.yml
conda.recipe/: build.sh  conda_upload.sh  meta.yaml
dev/doctrees/: changelog.doctree  contributing.doctree  install.doctree
dev/html/: .buildinfo  changelog.html  contributing.html  genindex.html  index.html  install.html  objects.inv  search.html  searchindex.js
docs/: environment.yml  requirements.txt
docs/source/: changelog.rst  conf.py  contributing.rst  index.rst  install.rst
examples/: 00_Constants.html  00_Constants.ipynb  01_Loading_Data.html  01_Loading_Data.ipynb  02_Model_Field_Names.html  02_Model_Field_Names.ipynb  03_Transmission_Spectrum.html  03_Transmission_Spectrum.ipynb  04_Rotational_And_Divergent_Winds.html  04_Rotational_And_Divergent_Winds.ipynb  05_Postprocessing_LFRic.html  05_Postprocessing_LFRic.ipynb  index.html
examples/sample_data/: example.json  sample_t1e_2d_mean.pp
plots/: __init__.py
requirements/: environment-py3.10.yml  environment-py3.11.yml  environment-py3.12.yml  environment-py3.9.yml  pypi-core.txt
src/aeolus/: __init__.py  __main__.py  _version.py  cli.py  coord.py  core.py  decor.py  exceptions.py  io.py  lfric.py  log.py  meta.py  postprocess.py  proc_um_output.py  region.py  runtime.py  subset.py  synthobs.py
tests/: test_calc.py  test_const.py  test_coord.py  test_core.py  test_io.py  test_meta.py  test_model.py  test_plot.py  test_synthobs.py
(+254 files in other folders)
