[metadata]
name = aeolus
description = Python library for object-oriented analysis of atmospheric model output.
long_description = file: README.md
long_description_content_type = text/markdown
author = Denis Sergeev
author_email = dennis.sergeev@gmail.com
maintainer = aeolus developers
maintainer_email = dennis.sergeev@gmail.com
license = LGPL-3.0 
license-file = LICENSE
platform = any
keywords = atmospheric-science, planetary-science, climate-model
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science
    Intended Audience :: Science/Research
    Natural Language :: English,
    Operating System :: OS Independent
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
url = https://github.com/exoclim/aeolus
project_urls =
    Documentation = https://exoclim.github.io/aeolus/
    Bug Tracker = https://github.com/exoclim/aeolus/issues
    Source Code = https://github.com/exoclim/aeolus

[options]
zip_safe = False
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    matplotlib>=3.0
    numpy>=1.17.0
    scitools-iris>=2.4.0
    latlon23>=1.0.7

[options.packages.find]
where = src

[options.extras_require]
test = pytest>=3.3

[build_sphinx]
source-dir = docs/source
build-dir = docs/_build
all-files = True

[flake8]
max-line-length = 100
ignore = D413, W503, W504 
exclude = src/aeolus/_version.py,versioneer.py
inline-quotes = "

[pycodestyle]
ignore = D413, W503, W504 
max-line-length = 100

[versioneer]
VCS = git
style = pep440
versionfile_source = src/aeolus/_version.py
versionfile_build = aeolus/_version.py
tag_prefix =
